# AI_SAMSUNG-CapstoneProy

./: .gitignore  AGENTS.md  Makefile  README.md  app.py  context.md  crop_config.py  model_def.py  predict_worker.py  pyproject.toml  requirements.txt  save_model.py  server.py  setup.py  techDocument.md  train.py  training_results.json  treatment_db.py  treatments.json
.github/workflows/: ci.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/cropguard/app/: MainActivity.kt
android/app/src/main/java/com/cropguard/app/data/: Api.kt
android/app/src/main/java/com/cropguard/app/ui/: CaptureScreen.kt  Components.kt  I18n.kt  ResultScreen.kt  SettingsScreen.kt
android/app/src/main/java/com/cropguard/app/ui/theme/: Theme.kt
android/app/src/main/java/com/cropguard/app/vm/: CropViewModel.kt
android/app/src/main/res/drawable/: ic_leaf.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml
android/app/src/test/java/com/cropguard/app/: ApiTest.kt
docs/: Link_datasets.txt
scripts/: create_kanban.ps1
src/cropguard/: app.py  crop_config.py  llm_advice.py  model_def.py  server.py  setup.py  train.py
tests/: conftest.py
tests/e2e/: test_flow_e2e.py  test_full_flow.py
tests/unit/: test_crop_config.py  test_image_types.py  test_model_def.py  test_server.py  test_treatment_correctness.py  test_treatments.py
